# f1tenth

./: .clang-format  .clang-tidy  .clangd  .flake8  .gitignore  .gitmodules  .mega-linter.yml  .pre-commit-config.yaml  INSTRUCTIONS.md  LICENSE  README.md  cyclonedds_config.xml  mypy.ini  pyproject.toml  range_libc.pyi  test.py  tf_transformations.pyi
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-dev.yaml  build-jetson.yaml  build-sim.yaml  build.yaml  packages-and-lint-dev.yaml  packages-dev.yaml  packages-jetson.yaml  packages.yaml  sim-build.yaml
dev_ws/: build_wrapper.sh
dev_ws/src/common/: README.md
dev_ws/src/control/: README.md
dev_ws/src/hardware/: README.md
dev_ws/src/launch/: nav_with_sim.py
dev_ws/src/navigation/: README.md
dev_ws/src/navigation/waypoint_triangulation/: CMakeLists.txt
dev_ws/src/navigation/waypoint_triangulation/include/: triangulator.hpp
dev_ws/src/navigation/waypoint_triangulation/src/: triangulator.cpp
dev_ws/src/operations/: README.md
dev_ws/src/perception/: README.md
dev_ws/src/perception/image_generator/: CMakeLists.txt  package.xml
dev_ws/src/perception/image_generator/include/image_generator/: image_generator.hpp
developer/: CONTRIBUTING.md  SIMULATOR.md
docker/: Dockerfile  Dockerfile.dev  Dockerfile.hardware  Dockerfile.jetson  Dockerfile.sim  README.md  compose.dev.yml  compose.jetson.yml  compose.yml  setup.bash
docs/: BATTERY_USAGE.md  CONTRIBUTING.md  JETSON_DEVELOPMENT.md  MANUAL_DRIVING.md  NETWORK_SETUP.md  ONBOARDING.md  SETUP.md  SIMULATOR.md  VSCODE_USAGE.md  f1tenth_system.md
onboarding_ws/: README.md
onboarding_ws/src/lab1_pkg/: package.xml  setup.py
onboarding_ws/src/py_pubsub/: package.xml  setup.py
scripts/: README.md  colcon_defaults.yaml  formula_bashrc.sh  github_action_runner.sh  install_extensions.sh  setup.sh  simulator_setup.bash  simulator_setup.sh
sim_ws/: README.md
sim_ws/src/f1tenth_gym_ros/: README.md  package.xml  setup.py
simulator/: README.md
src/: test.py
src/common/: README.md
src/common/cones_viz/: package.xml  setup.cfg  setup.py
src/common/launch_pkg/: CMakeLists.txt  package.xml  setup.py
src/common/launch_pkg/config/: config.yaml  launch_viz.rviz  sim_config.yaml  visualizer.rviz  vizualizer.rviz
src/common/launch_pkg/launch/: autonomous_launch.launch.py  fsae.launch.py  launch_node.launch.py  simulator_launch.launch.py
src/common/safety_node/: CMakeLists.txt  README.md  package.xml
src/control/pure_pursuit/: .clang-tidy
src/estimation/: README.md
src/estimation/perception_synthesizer/: CMakeLists.txt  package.xml
src/hardware/: README.md
src/mypkg/: CMakeLists.txt  package.xml
src/mypkg/src/: mynode.cpp
src/navigation/: README.md
src/navigation/particle_filter/: package.xml  setup.py
src/navigation/path_planning/: CMakeLists.txt  package.xml
src/navigation/path_planning/config/: config.yaml
src/navigation/path_planning/include/: triangulator.hpp
src/navigation/path_planning/launch/: triangulator.launch.py
src/navigation/path_planning/src/: triangulator.cpp
src/navigation/pure_pursuit/: CMakeLists.txt  README.md  package.xml
src/navigation/waypoint_generator/: README.md  map_corner_positions.csv  package.xml  setup.py
src/navigation/waypoint_new/: package.xml  setup.cfg  setup.py
src/navigation/waypoint_new/config/: triangulator_params.yaml
src/navigation/waypoint_new/launch/: new_triangulator.launch.py
src/navigation/waypoint_new/waypoint_new/: new_triangulator.py
src/navigation/waypoint_triangulation/: CMakeLists.txt  package.xml
src/navigation/waypoint_triangulation/config/: waypoint_viz.rviz
src/navigation/waypoint_triangulation/include/: triangulator.hpp
src/navigation/waypoint_triangulation/launch/: visualize_system.launch.py  waypoint_tri.launch.py
src/navigation/waypoint_triangulation/src/: new_triangulator.py  triangulator.cpp  waypoint_visualizer.cpp
src/onboarding/: CMakeLists.txt  package.xml  setup.py
src/onboarding/include/: odom_publisher.hpp  odom_relay.hpp
src/onboarding/include/onboarding/: odom_publisher.h  odom_relay.h
src/onboarding/launch/: _launch.py  launch.py  odom_pub_relay_launch.py  odom_system.launch.py  onboarding.launch.py  onboarding_launch.py  talk_pub.launch.py
src/onboarding/onboarding/: Odom_relay.py  odm_publisher.py  odm_relay.py  odom_publisher.py  odom_relay.py
src/onboarding/src/: odom_publisher.cpp  odom_publisher.hpp  odom_relay.cpp  odom_relay.hpp
src/onboarding_package/: package.xml  setup.cfg  setup.py
src/onboarding_package/launch/: odom_launch.py
src/onboarding_package/onboarding_package/: odom_publisher.py  odom_relay.py
src/onboarding_python/: package.xml  setup.cfg  setup.py
src/onboarding_python/launch/: onboarding.launch.py
src/onboarding_python/onboarding_python/: odom_publisher.py  odom_relay.py
src/orientation/: CMakeLists.txt  package.xml
src/orientation/include/: odom_publisher.h
src/orientation/src/: odom_publisher.cpp
src/perception/: .gitignore  README.md
src/perception/camera_detection/: package.xml  setup.py
src/perception/camera_detection/camera_detection/: detections.py
src/perception/camera_detection/config/: config.yaml
src/perception/camera_detection/launch/: detection.launch.py
src/perception/detection_generator/: CMakeLists.txt  package.xml  setup.cfg
src/perception/detection_generator/data/: cone_positions.csv  curved.csv  eight.csv
src/perception/detection_generator/include/detection_generator/: detection_generator.hpp
src/perception/detection_generator/launch/: generator.launch.py
src/perception/detection_generator/src/: detection_generator.cpp
src/simulation/detection_generator/: package.xml  setup.py
src/simulation/detection_generator/config/: config.yaml
src/simulation/detection_generator/data/: curved.csv  eight.csv  straight.csv
src/simulation/detection_generator/detection_generator/: generator.py
src/test_pkg/: package.xml  setup.py
(+188 files in other folders)
