<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detection_generator</name>
  <version>0.0.0</version>
  <description>Generates Detections</description>
  <maintainer email="krupalhi@ualberta.ca">Krupal Shah</maintainer>
  <license>MIT</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rc_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
